--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,12 @@
     "description": "The Database Abstraction LIbrary for Minormous Framework",
     "type": "library",
     "require": {
-        "doctrine/dbal": "^3.1"
+        "doctrine/dbal": "^3.1",
+        "minormous/metabolize": "dev-mclardy/dali",
+        "psr/log": "^1.1",
+        "webmozart/assert": "^1.10",
+        "davedevelopment/phpmig": "^1.7",
+        "rdlowrey/auryn": "^1.4"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
@@ -20,6 +25,12 @@
         {
             "name": "Marisa",
             "email": "marisa@clardy.eu"
+        }
+    ],
+    "repositories": [
+        {
+            "type": "vcs",
+            "url":  "git@github.com:minormous/metabolize.git"
         }
     ]
 }
